# Awesome-Rag-Attacks

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.py  config.yaml
src/: dataset_loader.py  evaluation.py  prompts.py  schemas.py  victim_rag.py
src/attacks/: attack_factory.py  base_attack.py  corrupt_rag_attack.py  poisoned_rag_attack.py
